--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "devDependencies": {
     "coffee-script": ">=1.7.x",
     "mocha": "~1.x.x",
-    "should": "~3.1.2"
+    "should": "~3.1.2",
+    "sinon": "~1.8.2"
   },
   "scripts": {
     "build": "coffee --bare --compile --output lib/ src/",
